--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
     border-left: var(--mainlines) 1px solid;
     border-right: var(--mainlines) 1px solid;
     max-width: 1500px;
-    width: 80vw;
+    width: 95vw;
     margin: auto;
     /* margin-left: 55%; */
     /* width: 45%; */
@@ -58,8 +58,6 @@ body {
     background-color: white;
 }
 .header2 {
-    position: sticky;
-    top: 0;
     border-bottom: var(--mainlines) 1px solid;
     padding: 0.5em;
     font-size: 1rem;
@@ -142,22 +140,23 @@ body {
 }
 
 .table {
-    overflow: scroll;
+    overflow-x: auto;
     width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
 }
 .tableinner {
+    /* overflow: scroll; */
+    width: 100%;
     border-collapse: collapse;
     border: 2px solid #ddd;
-    /* padding: 5em; */
 }
 
 .tableinner td,
 .tableinner th {
     border: 1px solid #ddd;
-    padding: 10px 15px;
+    padding: 0.8em;
 }
 .tableinner th {
     top: 0;
@@ -179,5 +178,18 @@ body {
 @media (max-width: 1000px) {
     html {
         font-size: 10px;
+    }
+}
+@media (max-width: 500px) {
+    html {
+        font-size: 8px;
+    }
+    .tableinner th {
+        padding: 1em 0.3em;
+    }
+    .tableinner td {
+    }
+    .id {
+        display: none;
     }
 }
