--- a/src/App.css
+++ b/src/App.css
@@ -56,14 +56,26 @@ body {
     padding: 0.5em;
     font-size: 1.4rem;
     background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 .header2 {
     border-bottom: var(--mainlines) 1px solid;
     padding: 0.5em;
-    font-size: 1rem;
+    font-size: 1.4rem;
     background-color: white;
+    width: 100%;
 }
 
+#updated {
+    font-size: 0.8rem;
+    border: 2px solid var(--mainlines);
+    padding: 1em;
+}
 .header span {
     font-size: 1.1rem;
 }
@@ -144,6 +156,8 @@ body {
     text-align: center;
     display: flex;
     justify-content: center;
+    position: relative;
+    z-index: 3;
 }
 .tableinner {
     width: 100%;
@@ -163,7 +177,9 @@ body {
     color: var(--mainWhite);
     position: sticky;
     top: 0;
-    /* cursor: pointer; */
+}
+.width {
+    z-index: 4;
 }
 
 /* .tableinner th:hover {
@@ -172,6 +188,9 @@ body {
 
 .tableinner tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+.tableinner tr:nth-child(odd) {
+    background-color: #fff3f3;
 }
 
 @media (max-width: 1000px) {
