--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,13 @@ body {
 .container {
     padding: 1em 0.5em;
 }
-
+.loader {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* //header==--*/
 
 .header {
